orchestration/k8s/templates/task-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: task-app-ingress-ui
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - localhost
          secretName: ssl-cert
    rules:
        - http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: task-app-ui-service
                            port:
                                number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: task-app-ingress-api
    # annotations:
    #     nginx.ingress.kubernetes.io/rewrite-target: /api
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - localhost
          secretName: ssl-cert
    rules:
        - http:
              paths:
                  - path: /api
                    pathType: Prefix
                    backend:
                        service:
                            name: task-app-api-service
                            port:
                                number: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: task-app-ingress-mongo-express
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - localhost
          secretName: ssl-cert
    rules:
        - http:
              paths:
                  - path: /express
                    pathType: Prefix
                    backend:
                        service:
                            name: task-app-mongo-express-service
                            port:
                                number: 8081
